@@ -1,8 +1,10 @@
 Compiling TeX binaries on Solaris
 
-(The document describes the procedures used on Sparc Solaris binaries, but the same rules should apply to i386 and x86_64 as well.)
+(The document describes the procedures used on Sparc Solaris binaries, but the same
+rules should apply to i386 and x86_64 as well.)
 
-Solaris 9 has been out of official support for a while and making software compile on that platform is challenging, so it hardly make any sense to try to support it.
+Solaris 9 has been out of official support for a while and making software compile
+on that platform is challenging, so it hardly make any sense to try to support it.
 
 Solaris 10 reaches end of support in January 2021.
     http://en.wikipedia.org/wiki/Solaris_(operating_system)#Version_history
@@ -38,9 +40,11 @@ You can check the libc version with
 Building wget
 =============
 
-Building wget on the latest version of Solaris 10 will make the binary useless on older Updates of Solaris 10 as it would depend on SUNW_1.22.7.
+Building wget on the latest version of Solaris 10 will make the binary
+useless on older Updates of Solaris 10 as it would depend on SUNW_1.22.7.
 
-One option to build wget in a "compatible way" would be to build it on Solaris 9 with "cc". The other hack is the usage of map files.
+One option to build wget in a "compatible way" would be to build it on
+Solaris 9 with "cc".  The other hack is the usage of map files.
 
 To make it work on older systems the following hack was used (thanks to the OpenCSW community):
     https://buildfarm.opencsw.org/source/xref/opencsw/csw/mgar/pkg/wget/trunk/files/map.wget
@@ -50,7 +54,8 @@ libc.so - SUNW_1.22.5 SUNWprivate_1.1 $ADDVERS=SUNW_1.22.5;
 
 export LD_OPTIONS="-M $PWD/mapfile"
 
-And the following configuration was used to get rid of dependencies (which are not installed on Solaris by default):
+And the following configuration was used to get rid of dependencies (which
+are not installed on Solaris by default):
 
 > ./configure --enable-ipv6 --disable-iri --disable-nls \
               --disable-ntlm --disable-pcre --without-libiconv-prefix \
@@ -72,7 +77,9 @@ The binary was built with gcc 4.9.2.
 Building xz
 ===========
 
-The version 5.2.1 of xz would likewise depend on SUNW_1.22.6 by default, so we used the same hack with a map file to make it work on slightly older systems.
+The version 5.2.1 of xz would likewise depend on SUNW_1.22.6 by default, so
+we used the same hack with a map file to make it work on slightly older
+systems.
 
 > export LD_OPTIONS="-M $PWD/mapfile"
 > ./configure --disable-nls --disable-shared
@@ -85,5 +92,6 @@ The version 5.2.1 of xz would likewise depend on SUNW_1.22.6 by default, so we u
     libc.so.1 (SUNW_1.22);
 
 
-In case that binaries should run on even older systems, users should report problems and we can target even older systems by patching the mapfile.
+In case that binaries should run on even older systems, users should report
+problems and we can target even older systems by patching the mapfile.
 
